--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>responsive portfolio1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
+<nav>
+    <h1 class="architect-title">G3 Architects</h1>
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact Us</a></li>
+        <li><a href=""> Login</a></li>
+    </ul>
+</nav>
+<div class="banner-content">
+    <h1 class="banner-title">Brand New 
+        Group of Architects</h1>
+    <p class="banner-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+    <button class="btn-primary">Explore More</button>
+    <img src="/images/banner.png" alt="">
+</div>
 
     </header>
     <main>
