my first responsive site

--- a/index.html
+++ b/index.html
@@ -99,8 +99,20 @@
         </section>
     </main>
     <footer>
-        
-
+        <div class="sponser">
+            <h2 class="sponser-title">Our Sponspors</h2>
+            <p class="design-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+<div class="sponser-pic">
+    <img src="/images/sponsors/spotify.png" alt="" class="sponser-img">
+    <img src="/images/sponsors/amazon.png" alt="" class="sponser-img">
+    <img src="/images/sponsors/google.png" alt="" class="sponser-img">
+    <img src="/images/sponsors/telerama.png" alt="">
+    <img src="/images/sponsors/figma.png" alt="" class="sponser-img">
+</div>
+<div class="security">
+    <p>All rights reserved copyright@2023 startup landing page design</p>
+</div>
     </footer>
 </body>
 </html>
