--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <p class="banner-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
     <button class="btn-primary">Explore More</button>
 </div>
-<img src="/images/banner.png" alt="" class="ban-img">
+<img src="./images/banner.png" alt="" class="ban-img">
   </header>
     <main>
         <section class="featur-container">
             <div class="featur-img">
-                <img src="/images/team1.png" alt="">
-                <img src="/images/team2.png" alt="">
-                <img src="/images/team3.png" alt="">
-                <img src="/images/team4.png" alt="">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
             </div>
             <div class="featur-description">
                 <h3 class="featur-title"><span class="list">Quick list</span><span class="our">of Our</span><span class="last"> Features</span></h3>
@@ -61,7 +61,7 @@
                 </div>
             </div>
          <div class="design-pic">
-            <img src="/images/architect.png" alt="" class="design-img">
+            <img src="./images/architect.png" alt="" class="design-img">
             <button class="btn-secondary"><h1 class="btn-title">10+Year</h1><p class="btn-details">Experience</p></button>
          </div>
         </section>
@@ -72,25 +72,25 @@
             </div>
             <div class="card">
                 <div class="review-card">
-                    <img src="/images/icons/ribon.png" alt="" class="card-img">
+                    <img src="./images/icons/ribon.png" alt="" class="card-img">
                         <h3 class="card-stats">54</h3>
                         <p class="card-title">Awards Winnings</p>
                     </img>
                 </div>
                 <div class="review-card">
-                    <img src="/images/icons/projects.png" alt="" class="card-img">
+                    <img src="./images/icons/projects.png" alt="" class="card-img">
                         <h3 class="card-stats">1458</h3>
                         <p class="card-title">Project Finished</p>
                     </img>
                 </div>
                 <div class="review-card">
-                    <img src="/images/icons/customers.png" alt="" class="card-img">
+                    <img src="./images/icons/customers.png" alt="" class="card-img">
                         <h3 class="card-stats">590</h3>
                         <p class="card-title">Clients Worked</p>
                     </img>
                 </div>
                 <div class="review-carde">
-                    <img src="/images/icons/email.png" alt="" class="card-img">
+                    <img src="./images/icons/email.png" alt="" class="card-img">
                         <h3 class="card-stats">22578</h3>
                         <p class="card-title">Email Send</p>
                     </img>
@@ -104,11 +104,11 @@
             <p class="design-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
         </div>
 <div class="sponser-pic">
-    <img src="/images/sponsors/spotify.png" alt="" class="sponser-img">
-    <img src="/images/sponsors/amazon.png" alt="" class="sponser-img">
-    <img src="/images/sponsors/google.png" alt="" class="sponser-img">
-    <img src="/images/sponsors/telerama.png" alt="">
-    <img src="/images/sponsors/figma.png" alt="" class="sponser-img">
+    <img src="./images/sponsors/spotify.png" alt="" class="sponser-img">
+    <img src="./images/sponsors/amazon.png" alt="" class="sponser-img">
+    <img src="./images/sponsors/google.png" alt="" class="sponser-img">
+    <img src="./images/sponsors/telerama.png" alt="">
+    <img src="./images/sponsors/figma.png" alt="" class="sponser-img">
 </div>
 <div class="security">
     <p>All rights reserved copyright@2023 startup landing page design</p>
